--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,18 +3,15 @@
 
 name: Publish to NPM registry and Dockerhub
 
-# on:
-#   push:
-#     branches: [ "master" ]
-#   pull_request:
-#     branches: [ "master" ]
-
 on:
   workflow_dispatch:
     inputs:
       npm_registry:
         description: 'Custom NPM_REGISTRY'
         required: false
+  push:
+    tags:
+      - '*'     
 
 jobs:
   build:
